DBDT31318 接口调整